--- a/index.html
+++ b/index.html
@@ -69,9 +69,9 @@
         <section id="research" class="section">
             <h2>Research Interests</h2>
             <ul>
-                <li>[Research Area 1]</li>
-                <li>[Research Area 2]</li>
-                <li>[Research Area 3]</li>
+                <li>Machine Learning</li>
+                <li>Computer Vision</li>
+                <li>Medical Image Processing</li>
             </ul>
             <h3>Selected Publications</h3>
             <ul>
